added devise gem and table on home page

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
   database: database_test_test
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password: Krapi@123
+  socket: /var/run/mysqld/mysqld.sock
+
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
